--- a/webpack/src/assets/styles/scss.scss
+++ b/webpack/src/assets/styles/scss.scss
@@ -1,6 +1,6 @@
 
 .header{
-    background-color: #E5F3F6;
+    background-color: #E6FAFE;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@ h1 {
 
 .img {
     padding: 20px 0px;
-    background-color: #e1f6f1;
+    background-color: #E6FAFE;
     &__title{
         text-align: center;
         font-size: 25px;
@@ -31,7 +31,7 @@ h1 {
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        background-color: #e1f6f1;
+        background-color: #E6FAFE;
         padding: 20px;
         margin: 10px;
         border-radius: 20px;
@@ -46,7 +46,7 @@ h1 {
 
 .posts {
     padding: 20px 0px;
-    background-color: #e1f6f1;
+    background-color: #F5F5FF;
     &__title{
         text-align: center;
         font-size: 25px;
