--- a/next-js/styles/globals.scss
+++ b/next-js/styles/globals.scss
@@ -5,6 +5,7 @@ body {
 }
 
 body {
+  font-family: 'Montserrat', sans-serif;
   background: linear-gradient(to bottom, #4e54c8, #8f94fb);
   color: #fff;
   font-size: 20px;
